ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hello-risf.local.domain
    secretName: hello-risf-tls
  - hosts:
    - hello-itsf.local.domain
    secretName: hello-itsf-tls
  rules:
  - host: hello-risf.local.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: risf-service
            port:
              number: 80
  - host: hello-itsf.local.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itsf-service
            port:
              number: 80
